# scraper-assesment

./: .gitignore  QUESTIONS.md  README.md  challenge.docx  pyproject.toml
app/: __init__.py  models.py
app/cli/: __init__.py  ingest.py  scrape.py  summary.py
app/sql/: all_analysis.sql
app/support/: scrape.py  serialise.py  similarweb.py  similarweb_test.py  summary.py
