[tool.poetry]
name = "specter"
version = "0.1.0"
description = ""
authors = ["Sid Ganesan <siddha.ganesan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"
attrs = "^22.2.0"
cattrs = "^22.2.0"
pandas = "^1.5.3"
bs4 = "^0.0.1"
structlog = "^22.3.0"
pytz = "^2022.7.1"
pytest = "^7.2.2"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.6"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
